# ccf-framework

./: .coverage  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/ADR/: 001-docker-containerd-incompatibilidade.md  002-localstack-licenciamento.md  003-shimtest-descontinuado.md  006-setuptools-mivolo-compatibilidade.md  007-torch-torchvision-mesma-fonte.md  008-limitacao-generalizacao-bert-grooming.md
docs/validacao/: comparacao_ferramentas_forenses.md  matriz_de_riscos.md  teste_qualitativo_e2_e3.md
modulo_blockchain/chaincode/custody/: contrato.go  contrato_test.go  evidencia.go  evidencia_test.go  go.mod  go.sum  interfaces.go  main.go
modulo_blockchain/chaincode/custody/mocks/: chaincodestub.go  transaction.go
modulo_coleta/: aws_collector.py  azure_collector.py  docker_collector.py  gcp_collector.py  hashing.py
modulo_coleta/tests/: test_aws_collector.py  test_azure_collector.py  test_docker_collector.py  test_gcp_collector.py  test_hashing.py  test_hashing.py.save
modulo_ia/: deteccao_anomalias.py  deteccao_grooming.py  estimativa_idade.py  perceptual_hash.py  triagem.py  visao_computacional.py  xai.py
modulo_ia/tests/: test_deteccao_anomalias.py  test_deteccao_grooming.py  test_estimativa_idade.py  test_perceptual_hash.py  test_triagem.py  test_visao_computacional.py  test_xai.py
modulo_integracao/: laudo_pericial.py
modulo_integracao/cenarios_simulacao/: cenario_c1.py  cenario_c2.py  cenario_c3.py  executar_c1_real.py  executar_c2_real.py  executar_c3_real.py
modulo_integracao/logs/: cenario_c1_execucao.json  cenario_c1_execucao_completa.json  cenario_c2_execucao.json  cenario_c3_execucao.json
modulo_integracao/tests/: test_cenario_c1.py  test_cenario_c2.py  test_cenario_c3.py  test_laudo_pericial.py
