[project]
name = "ccf-framework"
version = "0.1.0"
description = "Framework de Perícia Digital Multi-Modal em Ambientes de Nuvem para Combate ao CSAM"
authors = [
    {name = "Lorena Guedes"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.43.43,<2.0.0)",
    "azure-storage-blob (>=12.30.0,<13.0.0)",
    "google-cloud-storage (>=3.12.1,<4.0.0)",
    "pdqhash (>=0.2.8,<0.3.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "numpy (<2.5)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "shap (<0.52)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "opennsfw2 (>=0.18.0,<0.19.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "tf-keras (>=2.21.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
